# T-Sense

./: .dockerignore  .frontend-design-context.md  .gitignore  .impeccable.md  Dockerfile  MANIFEST.in  README.md  README.zh-CN.md  ROADMAP.md  Signal Desk.bat  config.example.toml  pyproject.toml  requirements-dev.txt  requirements-llm.txt  requirements.txt  setup.bat  setup.sh  signal-desk
channel_lists/: README.md  __init__.py  example.txt  jobs.txt  market-news.public-candidates.json  market-news.txt
dashboard/: index.html  package-lock.json  package.json
docs/: agent-cli-contract.md  desktop-platforms.md  getting-api-credentials.md  quality-iteration.md  quality-task-state.md  technical-debt-cleanup-spec.md  testing.md  tos-risk-analysis.md  v0.5-alpha-alert-review-inbox.md
profiles/: README.md  __init__.py  aleksei-frontend.md  example-airdrop.md  example.md
scripts/: bot_actions.py  bot_api.py  bot_gateway.py  bot_intents.py  bot_replies.py  bot_runtime.py  daily_report.py  dashboard_opportunities.py  dashboard_profiles.py  dashboard_projection.py  dashboard_server.py  dashboard_setup.py  decision_intelligence.py  delivery.py  desk_actions.py  desk_artifacts.py  desk_bot_gateway_background.py  desk_credentials.py  desk_delivery_settings.py  desk_git.py  desk_miniapp.py  desk_operation_routes.py  desk_profile_routes.py  desk_profiles.py  desk_scheduler.py  desk_secret_settings.py  desk_settings_routes.py  desk_source_access.py  desk_source_assistant.py  desk_source_discovery.py  desk_source_registry.py  desk_sources.py  desk_telegram_login.py  doctor.py  eval_deepseek_cache.py  export_folder.py  item_display.py  local_credentials.py  monitor.py  monitor_alerts.py  (+30 more)
tests/: test_scan.py  (+19 more)
(+140 files in other folders)
